third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/try_transmute-size-increase.stderr
warning: unused variable: `increase_size`
  --> tests/ui-msrv/try_transmute-size-increase.rs:19:9
   |
19 |     let increase_size: Result<AU16, _> = try_transmute!(0u8);
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_increase_size`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/try_transmute-size-increase.rs:19:42
   |
19 |     let increase_size: Result<AU16, _> = try_transmute!(0u8);
   |                                          ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `AU16` (16 bits)
   = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
